--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="shortcut icon" href="img/favicon.ico">
 		<meta name="description" content="Simple Omelette Recipe">
 		<title>Simple Omelette Recipe</title>
-		<link rel="stylesheet" href="style.css">
+		<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
 		<div class="wrapper">
