--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<li class="list-omelette__item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
 							</ul>
 						</section>
-						<span class="separator-line"></span>
+						<hr class="separator-line"></hr>
 						<section class="omelette__instructions">
 							<h2 class="title">Instructions</h2>
 							<ul class="list-omelette list-omelette--instructions __counter">
@@ -81,30 +81,30 @@
 								</li>
 							</ul>
 						</section>
-						<span class="separator-line"></span>
+						<hr class="separator-line"></hr>
 						<section class="omelette__nutrition">
 							<h2 class="title">Nutrition</h2>
 							<p>
 								The table below shows nutritional values per serving without the additional fillings.
 							</p>
-							<div class="omelette__table table-omelette">
-								<div class="table-omelette__row">
-									Calories
-									<span>277kcal</span>
-								</div>
-								<div class="table-omelette__row">
-									Carbs
-									<span>0g</span>
-								</div>
-								<div class="table-omelette__row">
-									Protein
-									<span>20g</span>
-								</div>
-								<div class="table-omelette__row">
-									Fat
-									<span>22g</span>
-								</div>
-							</div>
+							<table class="omelette__table table-omelette">
+								<tr class="table-omelette__row">
+									<th>Calories</th> <!-- Header cell for label -->
+									<td>277kcal</td> <!-- Data cell for value -->
+								</tr>
+								<tr class="table-omelette__row">
+									<th>Carbs</th>
+									<td>0g</td>
+								</tr>
+								<tr class="table-omelette__row">
+									<th>Protein</th>
+									<td>20g</td>
+								</tr>
+								<tr class="table-omelette__row">
+									<th>Fat</th>
+									<td>22g</td>
+								</tr>
+							</table>
 						</section>
 					</div>
 				</article>
