--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<hr class="separator-line"></hr>
 						<section class="omelette__instructions">
 							<h2 class="title">Instructions</h2>
-							<ul class="list-omelette list-omelette--instructions __counter">
+							<ul class="list-omelette list-omelette--instructions --counter">
 								<li class="list-omelette__item">
 									<span>Beat the eggs:</span>
 									In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.
@@ -89,19 +89,19 @@
 							</p>
 							<table class="omelette__table table-omelette">
 								<tr class="table-omelette__row">
-									<th>Calories</th> <!-- Header cell for label -->
+									<th scope="row">Calories</th> <!-- Header cell for label -->
 									<td>277kcal</td> <!-- Data cell for value -->
 								</tr>
 								<tr class="table-omelette__row">
-									<th>Carbs</th>
+									<th scope="row">Carbs</th>
 									<td>0g</td>
 								</tr>
 								<tr class="table-omelette__row">
-									<th>Protein</th>
+									<th scope="row">Protein</th>
 									<td>20g</td>
 								</tr>
 								<tr class="table-omelette__row">
-									<th>Fat</th>
+									<th scope="row">Fat</th>
 									<td>22g</td>
 								</tr>
 							</table>
