--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 							</p>
 							<table class="omelette__table table-omelette">
 								<tr class="table-omelette__row">
-									<th scope="row">Calories</th> <!-- Header cell for label -->
-									<td>277kcal</td> <!-- Data cell for value -->
+									<th scope="row">Calories</th>
+									<td>277kcal</td>
 								</tr>
 								<tr class="table-omelette__row">
 									<th scope="row">Carbs</th>
